tests/neg-custom-args/no-experimental/experimentalnline.scala
import scala.annotation.experimental

@experimental // error
inline def g() = ()

def test: Unit =
  g() // errors
  ()
